--- a/test/performance/benchmarks/channel-pubsub/prod.config
+++ b/test/performance/benchmarks/channel-pubsub/prod.config
@@ -16,7 +16,8 @@ owner_list: "gracegao@google.com"
 owner_list: "nachocano@google.com"
 owner_list: "cshou@google.com"
 
-# Anyone can add their IAM robot here to publish to this benchmark.
+# GCP Service Accounts that can publish data to Mako. Since this is a prod
+# benchmark, only the CI account should be listed here.
 owner_list: "mako-job@knative-performance.iam.gserviceaccount.com"
 
 # Define the name and type for x-axis of run charts
